testsuite/veronac/typechecking/compile-fail/mut-view.out/stderr.txt
mut-view.verona:11:5: error: Type '(A & imm(none))' is not writable
    mut-view x;
    ^~~~~~~~~~
mut-view.verona:16:5: error: Type '(apply-extract (external 0) X)' is not writable
    mut-view x;
    ^~~~~~~~~~
mut-view.verona:21:5: error: Type '((A & imm(none)) | (A & iso(none)))' is not writable
    mut-view x;
    ^~~~~~~~~~
3 errors generated
